--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
   "name": "nomiku-js",
-  "version": "3.1.0",
+  "version": "4.0.0",
   "description": "A NodeJS module for interacting the a WiFi Nomiku and the Nomiku Tender service",
   "main": "nomiku.js",
   "dependencies": {
     "mqtt": "^1.7.0",
-    "needle": "^1.0.0",
-    "private-parts": "^0.4.1"
+    "needle": "^1.0.0"
   },
   "devDependencies": {},
   "scripts": {
